[section-24] feat: implemented findById