@@ -6,7 +6,7 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.CommandLineRunner;
 import org.springframework.context.annotation.Configuration;
 
-import java.util.List;
+import java.util.Arrays;
 
 @Configuration
 public class Instantiation implements CommandLineRunner {
@@ -26,6 +26,6 @@ public class Instantiation implements CommandLineRunner {
         User alex = new User(null, "Alex Green", "alex@gmail.com");
         User bob = new User(null, "Bob Grey", "bob@gmail.com");
 
-        this.userRepository.saveAll(List.of(maria, alex, bob));
+        this.userRepository.saveAll((Arrays.asList(maria, alex, bob)));
     }
 }
